--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:fix": "npm run lint:js -- --fix",
     "test": "NODE_ENV=test mocha --require babel-core/register $(find test/api -name '*.spec.js')",
     "build": "NODE_ENV=production ./node_modules/.bin/rollup -c",
-    "prepack": "npm run build"
+    "prepack": "npm install && npm install --only=dev && npm run build"
   },
   "dependencies": {
     "atob": "^2.0.3",
