Revert "WEB:1561:CHANGE: Remove prebuild to avoid mobify code style note found error during install from github"
This reverts commit aa0be40d6e496f4741418e2b51e794ca4369c2cb.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:js": "./node_modules/.bin/eslint '**/*.js'",
     "lint:fix": "npm run lint:js -- --fix",
     "test": "NODE_ENV=test mocha --require babel-core/register $(find test/api -name '*.spec.js')",
+    "prebuild": "npm run lint",
     "build": "NODE_ENV=production ./node_modules/.bin/rollup -c",
     "prepack": "npm install && npm install --only=dev && npm run build"
   },
