--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "commercecloud-ocapi-client",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "description": "An ES6 JavaScript Client for Salesforce Open Commerce API",
     "license": "SEE LICENSE IN LICENSE",
     "main": "dist/commercecloud-ocapi-client.cjs.js",
@@ -9,7 +9,8 @@
         "fs": false
     },
     "files": [
-        "dist"
+        "dist",
+        "src"
     ],
     "scripts": {
         "copyright:lint": "./node_modules/.bin/copyright 'src/**/*.js' 'bin/**/*.js' 'test/**/*.js'",
