--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-    "name": "commercecloud-ocapi-client",
-    "version": "0.2.2",
-    "description": "An ES6 JavaScript Client for Salesforce Open Commerce API",
-    "license": "SEE LICENSE IN LICENSE",
-    "main": "dist/commercecloud-ocapi-client.cjs.js",
-    "module": "dist/commercecloud-ocapi-client.es.js",
-    "browser": {
-        "fs": false
-    },
-    "files": [
-        "dist",
-        "src"
-    ],
-    "scripts": {
-        "copyright:lint": "./node_modules/.bin/copyright 'src/**/*.js' 'bin/**/*.js' 'test/**/*.js'",
-        "copyright:fix": "./node_modules/.bin/copyright --fix --update 'src/*.js' 'src/**/*.js' 'test/*.js' 'test/**/*.js'",
-        "docs": "./node_modules/.bin/jsdoc -c .jsdocrc",
-        "lint": "npm run lint:js && npm run copyright:lint",
-        "lint:js": "./node_modules/.bin/eslint '**/*.js'",
-        "lint:fix": "npm run lint:js -- --fix",
-        "test": "NODE_ENV=test mocha --require babel-core/register $(find test/api -name '*.spec.js')",
-        "prebuild": "npm run lint",
-        "build": "NODE_ENV=production ./node_modules/.bin/rollup -c",
-        "prepack": "npm install && npm install --only=dev && npm run build"
-    },
-    "dependencies": {
-        "atob": "^2.0.3",
-        "btoa": "^1.1.2",
-        "querystring": "^0.2.0",
-        "superagent": "3.5.2"
-    },
-    "devDependencies": {
-        "babel": "^6.23.0",
-        "babel-cli": "^6.24.1",
-        "babel-core": "6.18.0",
-        "babel-plugin-external-helpers": "^6.22.0",
-        "babel-preset-env": "^1.6.1",
-        "eslint": "3.19.0",
-        "eslint-import-resolver-webpack": "^0.8.3",
-        "eslint-plugin-import": "2.3.0",
-        "expect.js": "^0.3.1",
-        "express": "^4.16.2",
-        "jsdoc": "^3.4.3",
-        "mobify-code-style": "2.8.1",
-        "mocha": "~2.3.4",
-        "rollup": "^0.49.3",
-        "rollup-plugin-babel": "^3.0.2",
-        "rollup-plugin-commonjs": "^8.2.6",
-        "rollup-plugin-node-resolve": "^3.0.0",
-        "sinon": "1.17.3"
-    }
+  "name": "commercecloud-ocapi-client",
+  "version": "0.2.2",
+  "description": "An ES6 JavaScript Client for Salesforce Open Commerce API",
+  "license": "SEE LICENSE IN LICENSE",
+  "main": "dist/commercecloud-ocapi-client.cjs.js",
+  "module": "dist/commercecloud-ocapi-client.es.js",
+  "browser": {
+    "fs": false
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
+  "scripts": {
+    "copyright:lint": "node node_modules/.bin/copyright 'src/**/*.js' 'bin/**/*.js' 'test/**/*.js'",
+    "copyright:fix": "node node_modules/.bin/copyright --fix --update 'src/*.js' 'src/**/*.js' 'test/*.js' 'test/**/*.js'",
+    "docs": "node node_modules/.bin/jsdoc -c .jsdocrc",
+    "lint": "npm run lint:js",
+    "lint:js": "node node_modules/.bin/eslint '**/*.js'",
+    "lint:fix": "npm run lint:js -- --fix",
+    "test": "node node_modules/.bin/cross-env NODE_ENV=test node_modules/.bin/mocha --require babel-core/register $(find test/api -name '*.spec.js')",
+    "prebuild": "npm run lint",
+    "build": "node node_modules/.bin/cross-env NODE_ENV=production node_modules/.bin/rollup -c",
+    "prepublish": "npm install && npm install --only=dev && npm run build"
+  },
+  "dependencies": {
+    "atob": "^2.0.3",
+    "btoa": "^1.1.2",
+    "querystring": "^0.2.0",
+    "superagent": "3.5.2"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "6.18.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
+    "cross-env": "^5.2.0",
+    "eslint": "3.19.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-import": "2.3.0",
+    "expect.js": "^0.3.1",
+    "express": "^4.16.2",
+    "jsdoc": "^3.4.3",
+    "mobify-code-style": "2.8.1",
+    "mocha": "~2.3.4",
+    "rollup": "^0.49.3",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "sinon": "1.17.3"
+  }
 }
